tests/checker/diagnostics/0375_exception_constructor_arg_mismatch_06.ml.infer.expected
File "0375_exception_constructor_arg_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0375_exception_constructor_arg_mismatch_06 is not a valid module name.

File "0375_exception_constructor_arg_mismatch_06.ml", line 2, characters 15-19:
2 | let _ = E_zeta true
                   ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
